<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/dp_10"
        android:textSize="@dimen/sp_22"
        android:text="@string/personal"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/container_local"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_95"
        app:layout_constraintTop_toBottomOf="@+id/text_personal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10">
        <TextView
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_17"/>
        <ImageView
            app:tint="#258028"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/ic_dowload_40"/>
        <TextView
            android:id="@+id/text_number_of_local_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:textSize="@dimen/sp_17"
            android:text="@string/local_song"
            android:textColor="@color/black" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/container_favorite"
        android:layout_width="@dimen/dp_160"
        android:layout_height="@dimen/dp_95"
        app:layout_constraintTop_toBottomOf="@+id/text_personal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dp_10"
        app:cardCornerRadius="@dimen/dp_10">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:text="@string/favo"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_17"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:src="@drawable/ic_favorite_40"
            app:tint="#258028" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textview_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/container_favorite"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_10"
        android:textSize="@dimen/sp_22"
        android:text="@string/rencent"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_song_recent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_recent"
        tools:listitem="@layout/item_song" />

</androidx.constraintlayout.widget.ConstraintLayout>