<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-13dp">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container_searchview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_41"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginEnd="@dimen/dp_10"
            app:cardCornerRadius="@dimen/dp_20">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search"
                app:searchIcon="@drawable/ic_search"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="0dp" />
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_favorite_24"
        tools:layout_editor_absoluteY="731dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/search_result"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        tools:ignore="NotSibling" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintBottom_toTopOf="@+id/container_state_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search"
        tools:ignore="NotSibling">
        <androidx.cardview.widget.CardView
            android:id="@+id/container_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:cardBackgroundColor="@android:color/transparent">
            <ProgressBar
                android:id="@+id/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/text_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textSize="@dimen/sp_17"
                android:text="@string/no_data"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_song" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_state_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_song"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_margin="@dimen/dp_7"
            android:src="@drawable/img_logo_spotify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass" />


        <TextView
            android:id="@+id/text_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_song"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circle_image_song"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_artist_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/artist_name"
            android:textSize="@dimen/sp_14"
            app:layout_constraintStart_toStartOf="@+id/text_song_name"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_play_24"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
