<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_24" />
        <TextView
            android:id="@+id/text_number_of_list_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_17"
            android:layout_marginLeft="@dimen/dp_30"
            />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        tools:ignore="NotSibling"
        android:text="@string/list_liked_songs"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_playlist"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_10"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/container_state_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_playlist_name"
        tools:ignore="NotSibling"
        tools:listitem="@layout/item_song" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_state_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="#252121"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_song"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_margin="@dimen/dp_7"
            android:src="@drawable/ic_spotify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingClass" />


        <TextView
            android:id="@+id/text_song_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circle_image_song"
            app:layout_constraintTop_toTopOf="parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_song"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/text_artist_name"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/artist_name"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@+id/button_favorite"
            app:layout_constraintStart_toStartOf="@+id/text_song_name"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/sp_10"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_pause_24"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

        <ImageButton
            android:id="@+id/button_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite_24"
            app:layout_constraintEnd_toStartOf="@+id/button_play"
            app:layout_constraintTop_toBottomOf="@+id/text_song_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>